# modal-rna-seq-pipeline

./: .gitignore  README.md  main.py
modules/: fastqc.py  staralign.py
rnaseqpipe/: config.py  main.py  process_batch.py  setup.cfg
rnaseqpipe/modules/: downloader.py  fastqc.py  infer_strandedness.py  staralign.py  trim-galore.py  uploader.py  utils.py  wigToBigWig.py
rnaseqpipe/modules/infer_strandedness/: Dockerfile  main.py
scripts/: deploy.sh  generate_decoy_transcriptome.py  killall.py  make_salmon_index.py
