[metadata]
name = rnaseqpipe
version = 1.0
author = Timon Schneider
author_email = mail@timonschneider.de
description = An RNA-seq pipeline for creating wiggle files for yeast.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdsone/modal-rna-seq-pipeline
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = rnaseqpipe